--- a/_17-geostatistika.Rmd
+++ b/_17-geostatistika.Rmd
@@ -51,7 +51,7 @@ Miks aga üldse seda teha? Tihti saame ju niigi aru, milline on intensiivsus eri
 
 ## Ülesanne 1
 
-Vaata Tartumaa asustuse punktimustrit, vaata üldist ülevaadet andmetest ning loode Kernel density estimation. Lae Moodle'ist alla kiht tartumaa_asustus.gpkg ning ava see QGISis. Andmestik pärineb [Kohanimeregistrist](https://kohanimeregister.ee/knravalik/) ning selles on igale Tartumaa küla või aleviku nimele lisatud [Kohanimeraamatust](https://www.eki.ee/dict/knr/) esmamainimise aasta, kihelkond ning nime etümoloogia. Lisaks võid taustale avada ka eelmistes praktikumides kasutatud maakondade ja/või kihelkondade kihi.
+Vaata Tartumaa asustuse punktimustrit, vaata üldist ülevaadet andmetest ning loo Kernel density estimation. Lae Moodle'ist alla kiht tartumaa_asustus.gpkg ning ava see QGISis. Andmestik pärineb [Kohanimeregistrist](https://kohanimeregister.ee/knravalik/) ning selles on igale Tartumaa küla või aleviku nimele lisatud [Kohanimeraamatust](https://www.eki.ee/dict/knr/) esmamainimise aasta, kihelkond ning nime etümoloogia. Lisaks võid taustale avada ka eelmistes praktikumides kasutatud maakondade ja/või kihelkondade kihi.
 
 Vaata andmestiku atribuuttabelit, et näha millega on tegemist. Esmamainimise aastate tulbast ülevaate saamiseks võib kasutada funktsiooni *Show statistical summary*. Näha on lihtne ülevaade vanimast, noorimast külast ning keskmisest ja enimlevinud esmamainimise aastaarvust jms. 
 
